@@ -18,6 +18,10 @@ CHANGES
       determined.
       
 - sql
+    - Fixed missing _label attribute on Function object, others
+      when used in a select() with use_labels (such as when used
+      in an ORM column_property()).  [ticket:1302]
+      
     - the __selectable__() interface has been replaced entirely
       by __clause_element__().
 
